--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">lenarv03</string>
+    <string name="endEvent">END EVENT</string>
+    <string name="endingEvent">Ending event. Please wait…</string>
 </resources>
